# FinancialDailyReport

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  justfile  personal_view.md  pyproject.toml
.github/workflows/: deploy.yml
models/: nn_torch_snapshot_returns.joblib  nn_torch_snapshot_returns.meta.json
report_server/: gcs.py  limiter.py  main.py  yahoo_quotes.py
report_server/templates/: report.html  shell.html
scripts/: health_check.py  run_pipeline.py  run_scrapers.py
src/: config.py  run_report.py
src/api/: gemini.py  web_fetcher.py  youtube.py
src/ml/: features.py  predictor.py
src/pipelines/: macro_indicators.py  news.py  screened_stocks.py  tech_discoveries.py
src/pipelines/build_report/: __init__.py  _checkpoints.py  build_articles.py  build_companies.py  build_indicators.py  build_market_compare.py  build_personal_view.py  build_variations.py  models.py  pipeline.py  select_companies.py
src/scrapers/: base.py  investing_screener.py  investing_stock.py  yt_fxevolution.py  yt_scraper.py
src/scrapers/analyst/: anachart.py  marketbeat.py
src/scrapers/indicator/: _fred.py  aaii_sentiment.py  breakeven_10y.py  breakeven_5y.py  breakeven_5y5y.py  buffett_indicator.py  china_pmi.py  copper_gold_ratio.py  core_pce.py  cot.py  credit_spreads_ext.py  epu.py  equity_risk_premium.py  eurostoxx50_fwd_eps.py  fear_greed.py  fed_balance_sheet.py  fed_funds_rate.py  fed_june_probability.py  global_m2.py  intl_yields.py  ism_pmi.py  jolts.py  leading_sectors.py  lei.py  m2_us.py  margin_debt.py  move_index.py  oil_curve.py  real_yields.py  rrp_facility.py  shiller_cape.py  sp500_eps_growth.py  sp500_fwd_eps.py  sp500_fwd_pe.py  spy_m2_ratio.py  tga.py  vix.py  vix_term_structure.py  yield_curve.py
src/scrapers/news/: ft_world.py  stonex.py  tikr_blog.py
src/training_torch/: mlp.py
src/utils/: global_logger.py
tests/: api_tests.py  test_build_report_extras.py  test_investing_scraper.py  test_investing_screener.py  test_ml_features.py  test_select_companies.py
(+9 files in other folders)
