[project]
name = "ee-mind"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.0.1",
    "python-dotenv>=1.0.0",
    "yt-dlp>=2024.1.0",
    "youtube-transcript-api>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py", "*_tests.py"]
