[project]
name = "ee-mind"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.0.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "yt-dlp>=2024.1.0",
    "youtube-transcript-api>=0.6.0",
    "requests>=2.33.1",
    "curl-cffi>=0.15.0",
    "playwright>=1.59.0",
    "brotli>=1.2.0",
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.136.1",
    "google-cloud-storage>=3.10.1",
    "jinja2>=3.1.6",
    "torch>=2.0",
    "joblib>=1.3",
    "numpy>=1.26",
    "scikit-learn>=1.4",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"
name = "pytorch-cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[dependency-groups]
# minimal deps for the report-server Cloud Run image (no scraping stack)
server = [
    "fastapi[standard]>=0.136.1",
    "google-cloud-storage>=3.10.1",
    "jinja2>=3.1.6",
    "python-dotenv>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py", "*_tests.py"]
